Fix font size in IE 10
There was no fallback font size defined for IE 10. This caused the
browser to use the default size which was way too small. This ensures
we have a readable font size across browsers.

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ input,
 select,
 textarea {
 	color: #101820;
+	font-size: 16px;
 	font: 1.6rem/1.5em Georgia, serif;
 	margin: 0;
 }
